# Magok

./: CMakeLists.txt  README.md  package.xml
launch/: magok.launch
scripts/: mission_planner.py  motor_controller.py  servo_controller.py  servoserial.py
